Revision history for DBIx::Class

    * New Features / Changes
        - Add quote_names connection option. When set to true automatically
          sets quote_char and name_sep appropriate for your RDBMS
        - Add retrieve_on_insert column info flag, allowing to retrieve any
          column value instead of just autoinc primary keys
        - All limit dialects (except for the older Top and FetchFirst) are
          now using bind parameters for the limits/offsets, making DBI's
          prepare_cached useful across paged resutsets
        - Support for savepoints for SQLite
        - Support for MS Access databases via DBD::ODBC and DBD::ADO (only
          Win32 support currently tested)
        - Support for the Firebird RDBMS over the new DBD::Firebird driver
        - IC::DateTime support for MSSQL over DBD::ADO
        - Both the ::ODBC and ::ADO dispatchers now warn if a rdbms-specific
          driver is not found for this connection before falling back to
          plain ::Storage::DBI
        - ::Storage::DBI::sth was mistakenly marked/documented as public,
          privatize and warn on deprecated use
        - Massive overhaul of bind values/attributes handling - slightly
          changes the output of as_query (should not cause compat issues)
        - Support ancient DB2 versions (5.4 and older), with proper limit
          dialect
        - Support sub-second precision for TIMESTAMPs for Firebird over ODBC
        - Support BLOBs and CLOBs in WHERE clauses for Oracle, including LIKE
          queries for CLOBs.

    * Fixes
        - Fix ::Storage::DBI::* MRO problems on 5.8.x perls
        - Disable mysql_auto_reconnect for MySQL - depending on the ENV
          it sometimes defaults to on and causes major borkage on older
          DBD::mysql versions
        - Fix dropped bind values in select/group_by on Oracle (omission
          from 0542ec57 and 4c2b30d6)
        - Fix remaining errors with Oracle and identifiers longer than the