@@ -22,7 +22,7 @@ my @chain = (
     '+columns'  => [ { max_year => { max => 'me.year', -as => 'last_y' }}, ],
     '+select'   => [ { count => 'me.cdid' }, ],
     '+as'       => [ 'cnt' ],
-  } => 'SELECT me.cdid, LOWER( title ) AS lctitle, me.genreid, MAX( me.year ) AS last_y, COUNT( me.cdid ) FROM cd me',
+  } => 'SELECT me.cdid, LOWER( title ) AS lctitle, MAX( me.year ) AS last_y, me.genreid, COUNT( me.cdid ) FROM cd me',
 
   {
     select      => [ { min => 'me.cdid' }, ],
@@ -31,7 +31,7 @@ my @chain = (
 
   {
     '+columns' => [ { cnt => { count => 'cdid', -as => 'cnt' } } ],
-  } => 'SELECT MIN( me.cdid ), COUNT ( cdid ) AS cnt FROM cd me',
+  } => 'SELECT COUNT ( cdid ) AS cnt, MIN( me.cdid ) FROM cd me',
 
   {
     columns => [ { foo => { coalesce => [qw/a b c/], -as => 'firstfound' } }  ],
@@ -52,15 +52,24 @@ my @chain = (
   {
     '+select'   => [ 'me.year' ],
     '+as'       => [ 'year' ],
-  } => 'SELECT COALESCE( a, b, c ) AS firstfound, me.year, MAX( me.year ) AS last_y, COUNT( me.cdid ) AS cnt FROM cd me',
+  } => 'SELECT COALESCE( a, b, c ) AS firstfound, me.year, MAX( me.year ) AS last_y, COUNT( me.cdid ) AS cnt, me.year FROM cd me',
 
   {
     '+columns'   => [ 'me.year' ],
-  } => 'SELECT COALESCE( a, b, c ) AS firstfound, me.year, MAX( me.year ) AS last_y, COUNT( me.cdid ) AS cnt FROM cd me',
+  } => 'SELECT COALESCE( a, b, c ) AS firstfound, me.year, MAX( me.year ) AS last_y, COUNT( me.cdid ) AS cnt, me.year FROM cd me',
 
   {
     '+columns'   => 'me.year',
-  } => 'SELECT COALESCE( a, b, c ) AS firstfound, me.year, MAX( me.year ) AS last_y, COUNT( me.cdid ) AS cnt FROM cd me',
+  } => 'SELECT COALESCE( a, b, c ) AS firstfound, me.year, MAX( me.year ) AS last_y, COUNT( me.cdid ) AS cnt, me.year FROM cd me',
+
+  # naked selector at the end should just work
+  {
+    '+select'   => 'me.moar_stuff',
+  } => 'SELECT COALESCE( a, b, c ) AS firstfound, me.year, MAX( me.year ) AS last_y, COUNT( me.cdid ) AS cnt, me.year, me.moar_stuff FROM cd me',
+
+  {
+    '+select'   => [ { MOAR => 'f', -as => 'func' } ],
+  } => 'SELECT COALESCE( a, b, c ) AS firstfound, me.year, MAX( me.year ) AS last_y, COUNT( me.cdid ) AS cnt, me.year, me.moar_stuff, MOAR(f) AS func FROM cd me',
 
 );
 
@@ -85,6 +94,7 @@ while (@chain) {
 
 # Make sure we don't lose bits even with weird selector specs
 # also check that the default selector list is lazy
+# and make sure that unaliased +select does not go crazy
 $rs = $schema->resultset('CD');
 for my $attr (
   { '+columns'  => [ 'me.title' ] },    # this one should be de-duplicated but not the select's
@@ -111,10 +121,10 @@ is_same_sql_bind (
       me.year,
       me.genreid,
       me.single_track,
-      COUNT( artistid ) AS baz,
       me.year AS foo,
       me.year AS foo,
-      me.artistid AS bar
+      me.artistid AS bar,
+      COUNT( artistid ) AS baz
         FROM cd me
   )',
   [],
@@ -132,6 +142,31 @@ is_same_sql_bind (
       me.cdid,
       me.title
       FROM cd me
+  )',
+  [],
+  'Correct order of selected columns'
+);
+
+# Test bare +select with as from root of resultset
+$rs = $schema->resultset('CD')->search ({}, {
+  '+select'   => [
+    \ 'foo',
+    { MOAR => 'f', -as => 'func' },
+   ],
+});
+
+is_same_sql_bind (
+  $rs->as_query,
+  '( SELECT
+      me.cdid,
+      me.artist,
+      me.title,
+      me.year,
+      me.genreid,
+      me.single_track,
+      foo,
+      MOAR( f ) AS func
+       FROM cd me
   )',
   [],
   'Correct order of selected columns'
